// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ContentPane 1`] = `
<BasePane
  mainTitle=""
  titleIcon={Object {}}
>
  <PrimaryArea
    width={6}
  />
  <SecondaryArea
    width={6}
  />
</BasePane>
`;

exports[`renders Dashboard 1`] = `
<Container
  className="Dashboard"
  fluid={true}
  style={
    Object {
      "backgroundColor": "#0c163d",
      "color": "#ffffff",
    }
  }
>
  <style>
    
    .Dashboard .PrimaryArea .table {
        color: #ffffff;
    }

    .Dashboard .SecondaryArea .table {
        color: #ffffff;
    }

    .Dashboard a {
        color: #ffffff;
    }

    .Dashboard .Sidebar .MenuItem.active {
        background-color: #ffffff33;
    }
    
  </style>
  <Row>
    <Col
      md={2}
    >
      <div
        className="Sidebar"
        style={
          Object {
            "backgroundColor": "#152665",
            "boxShadow": "0 0 25px #3b6cf433",
            "color": "#ffffff",
          }
        }
      >
        <Logo
          shadowColor="#3b6cf433"
        />
        <div
          className="MenuArea"
        >
          <Menu
            items={Array []}
          />
          <MainMenu
            items={Array []}
          />
          <Menu
            items={Array []}
          />
        </div>
      </div>
    </Col>
  </Row>
</Container>
`;

exports[`renders FullWidthPane 1`] = `
<BasePane
  mainTitle=""
  titleIcon={Object {}}
>
  <PrimaryArea
    width={12}
  />
</BasePane>
`;
